--- a/package.json
+++ b/package.json
@@ -3,15 +3,13 @@
   "main": "index.js",
   "version": "1.0.0",
   "scripts": {
-    "start": "expo start",
+    "start": "npx expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "lint": "expo lint",
-    "electron": "cross-env ELECTRON_START_URL=http://localhost:8081 electron ./electron-main.js",
-    "electron-build-web": "expo export --platform web",
-    "electron-prod": "npm run electron-build-web && electron ./electron-main.js"
+    "android": "npx nexpo start --android",
+    "ios": "npx expo start --ios",
+    "web": "npx expo start --web",
+    "web:build": "npx expo export --platform web",
+    "lint": "npx expo lint"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
@@ -25,7 +23,6 @@
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.10",
     "expo-linking": "~8.0.9",
-    "expo-router": "~6.0.15",
     "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
@@ -43,11 +40,14 @@
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "concurrently": "^9.2.1",
     "cross-env": "^10.1.0",
     "electron": "^39.2.4",
+    "electron-builder": "^26.0.12",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
-    "typescript": "~5.9.2"
+    "typescript": "~5.9.2",
+    "wait-on": "^9.0.3"
   },
   "private": true
 }
